# tcs_recog

./: Cargo.toml  README.md  build.rs
proto/: stt.proto
src/: main.rs
