[package]
name = "tcs_recog"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15"
jsonwebtoken = "9"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"


[build-dependencies]
tonic-build = "0.12"
