[package]
name = "tcs_recog"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15"
hyper = { version = "0.14.1" }
#, features = ["tcp", "client", "http2"] }
hyper-openssl = "0.9"
jsonwebtoken = "9"
openssl = "0.10"
prost = "0.13"
prost-types = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-openssl = "0.2"
tower = "0.4"

[build-dependencies]
tonic-build = "0.12"
