[package]
name = "tcs_recog"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
dotenv = "0.15"
jsonwebtoken = "9"
prost = "0.13"
prost-types = "0.13"
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-openssl = "0.2"

[build-dependencies]
tonic-build = "0.12"
